--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,12 +1,13 @@
 header {
-  width: 100vw;
+  padding: 0px 10px;
+  max-width: 100vw;
   height: 60px;
-  position: fixed;
+  position: sticky;
   top: 0px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 nav {
-  position: fixed;
-  top: 10px;
-  right: 20px;
   display: flex;
 }
