--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,5 +1,5 @@
 header {
-  padding: 0px 10px;
+  padding: 0px 5vw;
   max-width: 100vw;
   height: 60px;
   position: sticky;
@@ -7,7 +7,20 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background-color: rgb(255, 129, 11);
+  color: white;
 }
 nav {
   display: flex;
+}
+
+nav button {
+  border: none;
+  background-color: transparent;
+  color: white;
+  padding: 0px 1vw;
+}
+
+nav button:hover {
+  color: rgb(255, 206, 160);
 }
