--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-/* --------- This is CSS Reset Code --------- */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -20,18 +19,42 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 
-/* --------- Begin your CSS Below here --------- */
+:root {
+  --primary-color: 24, 69%;
+  --l: 53%;
+  --secondary-color: 180, 22%, 45%;
+  --tertiary-color: 0, 0%, 25%;
+}
+
 body {
-	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Inter', sans-serif;
 }
-.App {
-	display: flex;
-	flex-direction: column;
-}
+
 button {
-	padding: 8px;
-	border: none;
-	background-color: rgba(62, 150, 165, 0.941);
-	color: white;
-	border-radius: 3px;
+  height: 45px;
+  min-width: 125px;
+  font-size: 20px;
+  border: none;
+  border-radius: 3px;
+}
+
+.blue-btn {
+  --color: hsl(var(--secondary-color));
+  background-color: var(--color);
+  color: white;
+}
+.orange-btn {
+  --color: hsl(var(--primary-color), var(--l));
+  background-color: var(--color);
+  color: white;
+}
+
+.App {
+  position: relative;
+  top: 0;
+  min-height: 100vh;
+}
+
+main {
+  padding-bottom: 200px;
 }
